--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -99,6 +99,42 @@
   width: 60%;
 }
 
+.parent__box .right__part .cards__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.parent__box .right__part .cards__row .card {
+  width: 30%;
+  padding: 1em;
+  color: #fff;
+  position: relative;
+}
+
+.parent__box .right__part .cards__row .card .item iframe {
+  width: 100%;
+}
+
+.parent__box .right__part .cards__row .card .upper {
+  position: absolute;
+  bottom: 2%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.parent__box .right__part .cards__row .card .upper i {
+  color: #f0c141;
+  font-size: 1em;
+  cursor: pointer;
+}
+
 @font-face {
   font-family: "OpenSans";
   src: url(../../fonts/OpenSans-Regular.ttf) format("TrueType");
