--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -65,5 +65,38 @@
   }
   .right__part {
     width: 60%;
+    .cards__row {
+      @include full-flexer;
+      justify-content: space-between;
+      .card {
+        width: 30%;
+        padding: 1em;
+        color: #fff;
+        position: relative;
+        .item {
+          iframe {
+            width: 100%;
+          }
+        }
+        .upper {
+          position: absolute;
+          bottom: 2%;
+          left: 50%;
+          transform: translateX(-50%);
+          i {
+            color: $secondary-color;
+            font-size: 1em;
+            cursor: pointer;
+          }
+        }
+        .card__overlay {
+          //   width: 100%;
+          //   height: 0;
+          //   bottom: 0;
+          //   overflow: hidden;
+          //   position: absolute;
+        }
+      }
+    }
   }
 }
