--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -73,6 +73,7 @@
         padding: 1em;
         color: #fff;
         position: relative;
+        overflow: hidden;
         .item {
           iframe {
             width: 100%;
@@ -90,11 +91,23 @@
           }
         }
         .card__overlay {
-          //   width: 100%;
-          //   height: 0;
-          //   bottom: 0;
-          //   overflow: hidden;
-          //   position: absolute;
+          width: 100%;
+          height: 0;
+          bottom: 0;
+          overflow: hidden;
+          position: absolute;
+          background-color: $primary-color;
+          transition: 0.3s;
+          left: 0;
+          padding: 0 1em;
+          .closur {
+            text-align: center;
+            i {
+              color: $secondary-color;
+              font-size: 1em;
+              cursor: pointer;
+            }
+          }
         }
       }
     }
