--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -89,12 +89,17 @@
             font-size: 1em;
             cursor: pointer;
           }
+          i.active + .card__overlay {
+            height: 100%;
+          }
+        }
+        .card__overlay.active {
+          height: 95%;
         }
         .card__overlay {
           width: 100%;
           height: 0;
-          bottom: 0;
-          overflow: hidden;
+          bottom: 5%;
           position: absolute;
           background-color: $primary-color;
           transition: 0.3s;
