--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -8,6 +8,7 @@
       color: $primary-color;
       font-size: 1.6em;
       font-weight: 900;
+      margin-top: 0;
     }
     .small__card {
       @include full-flexer;
