added the lightbox js

--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -76,8 +76,25 @@
         position: relative;
         overflow: hidden;
         .item {
-          iframe {
-            width: 100%;
+          cursor: pointer;
+          .light__box {
+            position: relative;
+            span {
+              position: absolute;
+              visibility: hidden;
+              opacity: 0;
+              transition: 0.3s;
+              font-size: 4em;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+            }
+            &:hover {
+              span {
+                visibility: visible;
+                opacity: 1;
+              }
+            }
           }
         }
         .upper {
@@ -117,5 +134,28 @@
         }
       }
     }
+  }
+}
+
+.lightbox__container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #000;
+  @include flexer(center, center);
+  flex-wrap: wrap;
+  .top__bar {
+    width: 80%;
+    text-align: right;
+    i {
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+  iframe {
+    width: 80%;
+    min-height: 70%;
   }
 }
