--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -113,6 +113,7 @@
         }
         .card__overlay.active {
           height: 95%;
+          overflow-y: scroll;
         }
         .card__overlay {
           width: 100%;
@@ -129,6 +130,41 @@
               color: $secondary-color;
               font-size: 1em;
               cursor: pointer;
+            }
+          }
+          .playlist__row {
+            .playlist__item {
+              @include full-flexer;
+              justify-content: space-between;
+              margin-bottom: 0.2em;
+              transition: 0.3s;
+              .lf {
+                width: 40%;
+                @include flexer(center, center);
+              }
+              .rf {
+                width: 50%;
+                h3 {
+                  font-size: 0.8em;
+                  margin: 0;
+                }
+                p {
+                  font-size: 0.6em;
+                }
+              }
+              &:last-child {
+                margin-bottom: 0;
+              }
+              &:first-child {
+                margin-top: 0.6em;
+              }
+              &:hover {
+                background-color: #777;
+              }
+            }
+            .playlist__item.active {
+              background-color: #000;
+              padding: 0.2em;
             }
           }
         }
