--- a/src/assets/sass/common/_classes.scss
+++ b/src/assets/sass/common/_classes.scss
@@ -4,3 +4,9 @@
   border-radius: 12px;
   display: inline-block;
 }
+.screen {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
